Made SEO friendly

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Croissant is a buttery, flaky, French viennoiserie pastry inspired by the shape of the Austrian kipferl but using the French yeast-leavened laminated dough."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Croissant</title>
+    <title>Miyu's Croissant Gallery</title>
   </head>
   <body>
     <h1>Croissant Page</h1>
-    <a href="/photo.html">Browse my gallery</a>
-    <a href="/contact.html" style="display: block">Contact me</a>
+    <a href="/photo.html" title="Photo Gallery">Browse my gallery</a>
+    <a href="/contact.html" title="Contact Link" style="display: block"
+      >Contact me</a
+    >
   </body>
 </html>
